[gd_scene load_steps=2 format=3 uid="uid://0trykxv28tux"]

[ext_resource type="Script" path="res://project_src/code_execution/function_node.gd" id="1_ieohg"]

[node name="FunctionNode" type="GraphNode"]
script = ExtResource("1_ieohg")

[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="position_offset_changed" from="." to="." method="_on_position_offset_changed"]
